# wippy

./: README.md
scripts/: install_dependencies.sh
src/mobility/: CMakeLists.txt  package.xml
src/mobility/include/mobility/: mobility_node.hpp  urdf_parser.hpp
src/mobility/src/: mobility_main.cpp  mobility_node.cpp
src/urdfs/: CMakeLists.txt  README.md  package.xml
src/urdfs/launch/: display.launch.py
src/urdfs/meshes/: axle.stl  chassis.stl  weight.stl  wheel.stl
src/urdfs/rviz/: urdf.rviz
src/urdfs/urdf/: inverted_pendulum.urdf  wippy.urdf
